--- a/css/index.css
+++ b/css/index.css
@@ -28,10 +28,23 @@ body * + * {
 
 .body-wrap {
     margin: 1.5em 1em;
+    width: 90%;
 }
 
 .calc-body {
     width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax( 3em, 1fr));
+    grid-auto-rows: 3.5em;
+    gap: .7em;
+}
+
+.reset {
+    grid-column: 1/3;
+}
+
+.equals {
+    grid-column: 3/5;
 }
 
 .theme-wrap {
@@ -75,8 +88,26 @@ body * + * {
 
 .calc-screen {
     background-color: hsl(224, 36%, 15%);
-    border-radius: 10px;
     height: 4.5em;
+}
+
+.calc-body {
+    background-color: hsl(223, 31%, 20%);
+    margin-top: 1em;
+    padding: 1em;
+}
+
+.btn {
+    border-radius: 10px;
+    display: block;
+    font-family: 'Spartan', sans-serif;
+    font-size: 1.5em;
+    
+}
+
+.delete,
+.reset {
+    font-size: 1.5rem;
 }
 
 
@@ -86,10 +117,6 @@ body * + * {
     display: flex;
     justify-content: space-between;
 }
-
-/* .btn {
-    font-size: ;
-} */
 
 .toggle-spans > span + *,
 .calc-body > button + *,
@@ -106,6 +133,10 @@ body * + * {
 
 .caps {
     text-transform: uppercase;
+}
+
+.mid-curve {
+    border-radius: 10px;
 }
 
 .span {
