--- a/css/index.css
+++ b/css/index.css
@@ -36,7 +36,7 @@ body * + * {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax( 3em, 1fr));
     grid-auto-rows: 3.5em;
-    gap: .7em;
+    gap: .8em;
 }
 
 .reset {
@@ -54,8 +54,8 @@ body * + * {
 
 .theme {
     align-self: flex-end;
-    padding-right: 1.5rem;
-    padding-bottom: .3rem;
+    padding-right: 2rem;
+    padding-bottom: .5rem;
 }
 
 .toggle {
@@ -98,18 +98,29 @@ body * + * {
 }
 
 .btn {
+    background-color: hsl(30, 25%, 89%);
+    border: none;
     border-radius: 10px;
+    box-shadow: 0 4.5px hsl(28, 16%, 65%);
+    color:hsl(222, 26%, 31%);
     display: block;
     font-family: 'Spartan', sans-serif;
     font-size: 1.5em;
-    
 }
 
 .delete,
 .reset {
+    background-color: hsl(225, 21%, 49%);
+    box-shadow: 0 4.5px hsl(224, 28%, 35%);
+    color: white;
     font-size: 1.5rem;
 }
 
+.equals {
+    background-color: hsl(6, 63%, 50%);
+    box-shadow: 0 4.5px hsl(6, 70%, 34%);
+    color: white;
+}
 
 /* Structure/ Skin */
 
