--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 :root {
     box-sizing: border-box;
-    font-size: 1em;
+    font-size: 0.7em;
 }
 
 *,
@@ -17,34 +17,23 @@ body * + * {
 /* Container-Content */
 
 .body {
-    align-items: center;    background-color: hsl(222, 26%, 31%);
+    align-items: center;
+    background-color: hsl(222, 26%, 31%);
     color: white;
     display: flex;
     font-family: 'Spartan', sans-serif;
     font-size: 1.5rem;
     font-weight: 700;
+    height: 100vh;
     justify-content: center;
+    max-height: 100vh;
+    max-width: 100%;  
 }
 
 .body-wrap {
     margin: 1.5em 1em;
     width: 90%;
-}
-
-.calc-body {
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax( 3em, 1fr));
-    grid-auto-rows: 3.5em;
-    gap: .8em;
-}
-
-.reset {
-    grid-column: 1/3;
-}
-
-.equals {
-    grid-column: 3/5;
+    max-width: 27em;
 }
 
 .theme-wrap {
@@ -93,15 +82,28 @@ body * + * {
 
 .calc-body {
     background-color: hsl(223, 31%, 20%);
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax( 3.05em, 1fr));
+    grid-auto-rows: 3.3em;
+    gap: .6em;
     margin-top: 1em;
-    padding: 1em;
+    padding: 1.2em 1em;
 }
+
+.reset {
+    grid-column: 1/3;
+}
+
+.equals {
+    grid-column: 3/5;
+}
+
 
 .btn {
     background-color: hsl(30, 25%, 89%);
     border: none;
-    border-radius: 10px;
-    box-shadow: 0 4.5px hsl(28, 16%, 65%);
+    border-radius: 5px;
+    box-shadow: 0 0.25rem hsl(28, 16%, 65%);
     color:hsl(222, 26%, 31%);
     display: block;
     font-family: 'Spartan', sans-serif;
@@ -111,14 +113,14 @@ body * + * {
 .delete,
 .reset {
     background-color: hsl(225, 21%, 49%);
-    box-shadow: 0 4.5px hsl(224, 28%, 35%);
+    box-shadow: 0 0.25rem hsl(224, 28%, 35%);
     color: white;
     font-size: 1.5rem;
 }
 
 .equals {
     background-color: hsl(6, 63%, 50%);
-    box-shadow: 0 4.5px hsl(6, 70%, 34%);
+    box-shadow: 0 0.25rem hsl(6, 70%, 34%);
     color: white;
 }
 
@@ -146,10 +148,43 @@ body * + * {
     text-transform: uppercase;
 }
 
-.mid-curve {
-    border-radius: 10px;
+.small-curve {
+    border-radius: 7px;
 }
 
 .span {
     display: block;
+}
+
+
+@media (min-width: 23.75rem) {
+    :root {
+        font-size: 0.8em;
+    }
+
+    .calc-body {
+        gap: .75em;
+    }
+
+}
+
+@media (min-width: 27.8rem) {
+    .root {
+        font-size: 1em;
+    }
+
+    .calc-body {
+        grid-template-columns: repeat(auto-fit, minmax( 3.7em, 1fr));
+        padding: 1.5em 1.2em;
+        row-gap: 1.2em;
+        
+    }
+}
+
+@media (min-width: 31.25rem) {
+    .calc-body {
+        grid-template-columns: repeat(auto-fit, minmax(4.5em, 1fr));
+        gap: 1.3em .9em;
+        
+    }
 }
